@@ -1,3 +1,8 @@
+2010-02-24  Jakub Jelinek  <jakub@redhat.com>
+
+	PR debug/43150
+	* gcc.dg/guality/vla-1.c: New test.
+
 2010-02-24  Tobias Burnus  <burnus@net-b.de>
 
 	PR fortran/43042
